# projekt_3

./: CMakeLists.txt  gra.cpp  gra.h  main.cpp  minimax.cpp  minimax.h  plansza.cpp  plansza.h
